javascript_parser.output
   0  $accept : %entry% $end

   1  start : startAux

   2  startAux : program EOF
   3           | START_1_0 sexp1 EOF
   4           | START_2_0 tests EOF

   5  sexp1 : sexp1Aux

   6  sexp1Aux : IDENT1
   7           | value1
   8           | EXPR1_21_1 sexp1_2_1 LAMBDA1_0_4

   9  sexp1_2_1 : sexp1_2_1Aux

  10  sexp1_2_1Aux : Empty
  11               | sexp1_2_1Aux sexp1

  12  tests : testsAux

  13  testsAux : tests_0_0

  14  tests_0_0 : tests_0_0Aux

  15  tests_0_0Aux : Empty
  16               | tests_0_0Aux test

  17  idents : identsAux

  18  identsAux : IDENTS_0_0 ident_list IDENTS_0_2

  19  test : testAux

  20  testAux : idents test_0_1 IDENT1 STRING STRING sexp2 sexp2

  21  test_0_1 : test_0_1Aux

  22  test_0_1Aux : Empty
  23              | idents

  24  sexp2 : sexp2Aux

  25  sexp2Aux : sexp1
  26           | EXPR1_21_1 SEXP2_1_1 program LAMBDA1_0_4
  27           | EXPR1_21_1 SEXP2_2_1 expr1 LAMBDA1_0_4
  28           | EXPR1_21_1 SEXP2_3_1 expr1 LAMBDA1_0_4

  29  program : programAux

  30  programAux : expr1
  31             | stmt BLOCK_1_1 programAux

  32  stmt : stmtAux

  33  stmtAux : CONST_KW IDENT1 STMT_2_1 expr1
  34          | LET_KW IDENT1 STMT_2_1 expr1
  35          | expr1 STMT_2_1 expr1

  36  expr1 : expr1Aux

  37  expr1Aux : IDENT1
  38           | UNDEF_KW
  39           | value1
  40           | LAMBDA1_0_5 block LAMBDA1_0_7
  41           | lambda1
  42           | EXPR1_10_1 expr1Aux
  43           | EXPR1_6_0 expr1Aux
  44           | expr1Aux EXPR1_7_1 expr1Aux
  45           | expr1Aux EXPR1_8_1 expr1Aux
  46           | expr1Aux EXPR1_9_1 expr1Aux
  47           | expr1Aux EXPR1_10_1 expr1Aux
  48           | expr1Aux EXPR1_11_1 expr1Aux
  49           | expr1Aux EXPR1_12_1 expr1Aux
  50           | expr1Aux EXPR1_13_1 expr1Aux
  51           | expr1Aux EXPR1_14_1 expr1Aux
  52           | expr1Aux EXPR1_15_1 expr1Aux
  53           | expr1Aux EXPR1_16_1 expr1Aux
  54           | expr1Aux EXPR1_17_1 expr1Aux
  55           | expr1Aux EXPR1_18_1 expr1Aux
  56           | expr1Aux EXPR1_19_1 expr1Aux EXPR1_19_3 expr1Aux
  57           | EXPR1_20_0 EXPR1_22_1 EXPR1_20_2 EXPR1_21_1 expr1Aux LAMBDA1_0_4
  58           | expr1Aux EXPR1_21_1 expr_list LAMBDA1_0_4
  59           | expr1Aux EXPR1_22_1 IDENT1
  60           | LAMBDA1_0_5 field_list LAMBDA1_0_7
  61           | EXPR1_21_1 expr1Aux LAMBDA1_0_4

  62  value1 : value1Aux

  63  value1Aux : NUMBER
  64            | VALUE1_1_0
  65            | VALUE1_2_0
  66            | bool
  67            | STRING

  68  lambda1 : lambda1Aux

  69  lambda1Aux : FUNC_KW lambda1_0_1 EXPR1_21_1 ident_list LAMBDA1_0_4 LAMBDA1_0_5 block LAMBDA1_0_7

  70  lambda1_0_1 : lambda1_0_1Aux

  71  lambda1_0_1Aux : Empty
  72                 | IDENT1

  73  block : blockAux

  74  blockAux : RET_KW expr1
  75           | stmt BLOCK_1_1 blockAux

  76  field_list : field_listAux

  77  field_listAux : Empty
  78                | field field_list_1_1

  79  field_list_1_1 : field_list_1_1Aux

  80  field_list_1_1Aux : Empty
  81                    | field_list_1_1Aux field_list_1_1_0

  82  field_list_1_1_0 : field_list_1_1_0Aux

  83  field_list_1_1_0Aux : IDENT_LIST_1_1_0_0_0 field

  84  expr_list : expr_listAux

  85  expr_listAux : Empty
  86               | expr1 expr_list_1_1

  87  expr_list_1_1 : expr_list_1_1Aux

  88  expr_list_1_1Aux : Empty
  89                   | expr_list_1_1Aux expr_list_1_1_0

  90  expr_list_1_1_0 : expr_list_1_1_0Aux

  91  expr_list_1_1_0Aux : IDENT_LIST_1_1_0_0_0 expr1

  92  ident_list : ident_listAux

  93  ident_listAux : Empty
  94                | IDENT1 ident_list_1_1

  95  ident_list_1_1 : ident_list_1_1Aux

  96  ident_list_1_1Aux : Empty
  97                    | ident_list_1_1Aux ident_list_1_1_0

  98  ident_list_1_1_0 : ident_list_1_1_0Aux

  99  ident_list_1_1_0Aux : IDENT_LIST_1_1_0_0_0 IDENT1

 100  field : fieldAux

 101  fieldAux : IDENT1 EXPR1_19_3 expr1

 102  bool : boolAux

 103  boolAux : TRUE_KW
 104          | FALSE_KW

 105  Empty :

 106  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (106)

	EXPR1_10_1  shift 3
	EXPR1_21_1  shift 4
	EXPR1_6_0  shift 5
	LAMBDA1_0_5  shift 6
	NUMBER  shift 7
	EXPR1_20_0  shift 8
	IDENT1  shift 9
	START_1_0  shift 10
	START_2_0  shift 11
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	CONST_KW  shift 15
	FALSE_KW  shift 16
	FUNC_KW  shift 17
	LET_KW  shift 18
	TRUE_KW  shift 19
	UNDEF_KW  shift 20
	.  error

	start  goto 21
	startAux  goto 22
	program  goto 23
	value1  goto 24
	expr1  goto 25
	programAux  goto 26
	stmt  goto 27
	stmtAux  goto 28
	expr1Aux  goto 29
	lambda1  goto 30
	value1Aux  goto 31
	bool  goto 32
	lambda1Aux  goto 33
	boolAux  goto 34


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr1Aux : EXPR1_10_1 . expr1Aux  (42)

	EXPR1_10_1  shift 3
	EXPR1_21_1  shift 4
	EXPR1_6_0  shift 5
	LAMBDA1_0_5  shift 6
	NUMBER  shift 7
	EXPR1_20_0  shift 8
	IDENT1  shift 9
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	FALSE_KW  shift 16
	FUNC_KW  shift 17
	TRUE_KW  shift 19
	UNDEF_KW  shift 20
	.  error

	value1  goto 24
	expr1Aux  goto 35
	lambda1  goto 30
	value1Aux  goto 31
	bool  goto 32
	lambda1Aux  goto 33
	boolAux  goto 34


state 4
	expr1Aux : EXPR1_21_1 . expr1Aux LAMBDA1_0_4  (61)

	EXPR1_10_1  shift 3
	EXPR1_21_1  shift 4
	EXPR1_6_0  shift 5
	LAMBDA1_0_5  shift 6
	NUMBER  shift 7
	EXPR1_20_0  shift 8
	IDENT1  shift 9
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	FALSE_KW  shift 16
	FUNC_KW  shift 17
	TRUE_KW  shift 19
	UNDEF_KW  shift 20
	.  error

	value1  goto 24
	expr1Aux  goto 36
	lambda1  goto 30
	value1Aux  goto 31
	bool  goto 32
	lambda1Aux  goto 33
	boolAux  goto 34


state 5
	expr1Aux : EXPR1_6_0 . expr1Aux  (43)

	EXPR1_10_1  shift 3
	EXPR1_21_1  shift 4
	EXPR1_6_0  shift 5
	LAMBDA1_0_5  shift 6
	NUMBER  shift 7
	EXPR1_20_0  shift 8
	IDENT1  shift 9
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	FALSE_KW  shift 16
	FUNC_KW  shift 17
	TRUE_KW  shift 19
	UNDEF_KW  shift 20
	.  error

	value1  goto 24
	expr1Aux  goto 37
	lambda1  goto 30
	value1Aux  goto 31
	bool  goto 32
	lambda1Aux  goto 33
	boolAux  goto 34


state 6
	expr1Aux : LAMBDA1_0_5 . block LAMBDA1_0_7  (40)
	expr1Aux : LAMBDA1_0_5 . field_list LAMBDA1_0_7  (60)
	Empty : .  (105)

	EXPR1_10_1  shift 3
	EXPR1_21_1  shift 4
	EXPR1_6_0  shift 5
	LAMBDA1_0_5  shift 6
	NUMBER  shift 7
	EXPR1_20_0  shift 8
	IDENT1  shift 38
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	CONST_KW  shift 15
	FALSE_KW  shift 16
	FUNC_KW  shift 17
	LET_KW  shift 18
	RET_KW  shift 39
	TRUE_KW  shift 19
	UNDEF_KW  shift 20
	LAMBDA1_0_7  reduce 105

	value1  goto 24
	Empty  goto 40
	expr1  goto 41
	stmt  goto 42
	stmtAux  goto 28
	expr1Aux  goto 29
	block  goto 43
	lambda1  goto 30
	field_list  goto 44
	value1Aux  goto 31
	bool  goto 32
	lambda1Aux  goto 33
	blockAux  goto 45
	field_listAux  goto 46
	field  goto 47
	fieldAux  goto 48
	boolAux  goto 34


state 7
	value1Aux : NUMBER .  (63)

	.  reduce 63


state 8
	expr1Aux : EXPR1_20_0 . EXPR1_22_1 EXPR1_20_2 EXPR1_21_1 expr1Aux LAMBDA1_0_4  (57)

	EXPR1_22_1  shift 49
	.  error


state 9
	expr1Aux : IDENT1 .  (37)

	.  reduce 37


state 10
	startAux : START_1_0 . sexp1 EOF  (3)

	EXPR1_21_1  shift 50
	NUMBER  shift 7
	IDENT1  shift 51
	STRING  shift 12
	VALUE1_1_0  shift 13
	VALUE1_2_0  shift 14
	FALSE_KW  shift 16
	TRUE_KW  shift 19
	.  error

	sexp1  goto 52
	sexp1Aux  goto 53
	value1  goto 54
	value1Aux  goto 31
	bool  goto 32
	boolAux  goto 34


state 11
	startAux : START_2_0 . tests EOF  (4)
	Empty : .  (105)

	.  reduce 105

	tests  goto 55
	Empty  goto 56
	testsAux  goto 57
	tests_0_0  goto 58
	tests_0_0Aux  goto 59


state 12
	value1Aux : STRING .  (67)

	.  reduce 67


state 13
	value1Aux : VALUE1_1_0 .  (64)

	.  reduce 64


state 14
	value1Aux : VALUE1_2_0 .  (65)

	.  reduce 65


state 15
	stmtAux : CONST_KW . IDENT1 STMT_2_1 expr1  (33)

	IDENT1  shift 60
	.  error


state 16
	boolAux : FALSE_KW .  (104)

	.  reduce 104


state 17
	lambda1Aux : FUNC_KW . lambda1_0_1 EXPR1_21_1 ident_list LAMBDA1_0_4 LAMBDA1_0_5 block LAMBDA1_0_7  (69)
	Empty : .  (105)

	IDENT1  shift 61
	EXPR1_21_1  reduce 105

	Empty  goto 62
	lambda1_0_1  goto 63
	lambda1_0_1Aux  goto 64


state 18
	stmtAux : LET_KW . IDENT1 STMT_2_1 expr1  (34)

	IDENT1  shift 65
	.  error


state 19
	boolAux : TRUE_KW .  (103)

	.  reduce 103


state 20
	expr1Aux : UNDEF_KW .  (38)

	.  reduce 38


state 21
	%entry% : '\001' start .  (106)

	.  reduce 106


state 22
	start : startAux .  (1)

	.  reduce 1


state 23
	startAux : program . EOF  (2)

	EOF  shift 66
	.  error


state 24
	expr1Aux : value1 .  (39)

	.  reduce 39


state 25
	programAux : expr1 .  (30)
	stmtAux : expr1 . STMT_2_1 expr1  (35)

	STMT_2_1  shift 67
	EOF  reduce 30
	LAMBDA1_0_4  reduce 30


state 26
	program : programAux .  (29)

	.  reduce 29


state 27
	programAux : stmt . BLOCK_1_1 programAux  (31)

	BLOCK_1_1  shift 68
	.  error


state 28
	stmt : stmtAux .  (32)

	.  reduce 32


state 29
	expr1 : expr1Aux .  (36)
	expr1Aux : expr1Aux . EXPR1_7_1 expr1Aux  (44)
	expr1Aux : expr1Aux . EXPR1_8_1 expr1Aux  (45)
	expr1Aux : expr1Aux . EXPR1_9_1 expr1Aux  (46)
	expr1Aux : expr1Aux . EXPR1_10_1 expr1Aux  (47)
	expr1Aux : expr1Aux . EXPR1_11_1 expr1Aux  (48)
	expr1Aux : expr1Aux . EXPR1_12_1 expr1Aux  (49)
	expr1Aux : expr1Aux . EXPR1_13_1 expr1Aux  (50)
	expr1Aux : expr1Aux . EXPR1_14_1 expr1Aux  (51)
	expr1Aux : expr1Aux . EXPR1_15_1 expr1Aux  (52)
	expr1Aux : expr1Aux . EXPR1_16_1 expr1Aux  (53)
	expr1Aux : expr1Aux . EXPR1_17_1 expr1Aux  (54)
	expr1Aux : expr1Aux . EXPR1_18_1 expr1Aux  (55)
	expr1Aux : expr1Aux . EXPR1_19_1 expr1Aux EXPR1_19_3 expr1Aux  (56)
	expr1Aux : expr1Aux . EXPR1_21_1 expr_list LAMBDA1_0_4  (58)
	expr1Aux : expr1Aux . EXPR1_22_1 IDENT1  (59)

	EXPR1_10_1  shift 69
	EXPR1_12_1  shift 70
	EXPR1_14_1  shift 71
	EXPR1_19_1  shift 72
	EXPR1_21_1  shift 73
	EXPR1_22_1  shift 74
	EXPR1_7_1  shift 75
	EXPR1_8_1  shift 76
	EXPR1_9_1  shift 77
	EXPR1_11_1  shift 78
	EXPR1_13_1  shift 79
	EXPR1_15_1  shift 80
	EXPR1_16_1  shift 81
	EXPR1_17_1  shift 82
	EXPR1_18_1  shift 83
	EOF  reduce 36
	BLOCK_1_1  reduce 36
	IDENT_LIST_1_1_0_0_0  reduce 36
	LAMBDA1_0_4  reduce 36
	LAMBDA1_0_7  reduce 36
	STMT_2_1  reduce 36


state 30
	expr1Aux : lambda1 .  (41)

	.  reduce 41


state 31
	value1 : value1Aux .  (62)

	.  reduce 62


state 32
	value1Aux : bool .  (66)

	.  reduce 66


state 33
	lambda1 : lambda1Aux .  (68)

	.  reduce 68


state 34
	bool : boolAux .  (102)

	.  reduce 102


state 35
	expr1Aux : EXPR1_10_1 expr1Aux .  (42)
	expr1Aux : expr1Aux . EXPR1_7_1 expr1Aux  (44)
	expr1Aux : expr1Aux . EXPR1_8_1 expr1Aux  (45)
	expr1Aux : expr1Aux . EXPR1_9_1 expr1Aux  (46)
	expr1Aux : expr1Aux . EXPR1_10_1 expr1Aux  (47)
	expr1Aux : expr1Aux . EXPR1_11_1 expr1Aux  (48)
	expr1Aux : expr1Aux . EXPR1_12_1 expr1Aux  (49)
	expr1Aux : expr1Aux . EXPR1_13_1 expr1Aux  (50)
	expr1Aux : expr1Aux . EXPR1_14_1 expr1Aux  (51)
	expr1Aux : expr1Aux . EXPR1_15_1 expr1Aux  (52)
	expr1Aux : expr1Aux . EXPR1_16_1 expr1Aux  (53)
	expr1Aux : expr1Aux . EXPR1_17_1 expr1Aux  (54)
	expr1Aux : expr1Aux . EXPR1_18_1 expr1Aux  (55)
	expr1Aux : expr1Aux . EXPR1_19_1 expr1Aux EXPR1_19_3 expr1Aux  (56)
	expr1Aux : expr1Aux . EXPR1_21_1 expr_list LAMBDA1_0_4  (58)
	expr1Aux : expr1Aux . EXPR1_22_1 IDENT1  (59)

	EXPR1_21_1  shift 73
	EXPR1_22_1  shift 74
	EOF  reduce 42
	BLOCK_1_1  reduce 42
	EXPR1_10_1  reduce 42
	EXPR1_12_1  reduce 42
	EXPR1_14_1  reduce 42
	EXPR1_19_1  reduce 42
	EXPR1_19_3  reduce 42
	EXPR1_7_1  reduce 42
	EXPR1_8_1  reduce 42
	EXPR1_9_1  reduce 42
	IDENT_LIST_1_1_0_0_0  reduce 42
	LAMBDA1_0_4  reduce 42
	LAMBDA1_0_7  reduce 42
	STMT_2_1  reduce 42
	EXPR1_11_1  reduce 42
	EXPR1_13_1  reduce 42
	EXPR1_15_1  reduce 42
	EXPR1_16_1  reduce 42
	EXPR1_17_1  reduce 42
	EXPR1_18_1  reduce 42


state 36
	expr1Aux : expr1Aux . EXPR1_7_1 expr1Aux  (44)
	expr1Aux : expr1Aux . EXPR1_8_1 expr1Aux  (45)
	expr1Aux : expr1Aux . EXPR1_9_1 expr1Aux  (46)
	expr1Aux : expr1Aux . EXPR1_10_1 expr1Aux  (47)
	expr1Aux : expr1Aux . EXPR1_11_1 expr1Aux  (48)
	expr1Aux : expr1Aux . EXPR1_12_1 expr1Aux  (49)
	expr1Aux : expr1Aux . EXPR1_13_1 expr1Aux  (50)
	expr1Aux : expr1Aux . EXPR1_14_1 expr1Aux  (51)
	expr1Aux : expr1Aux . EXPR1_15_1 expr1Aux  (52)
	expr1Aux : expr1Aux . EXPR1_16_1 expr1Aux  (53)
	expr1Aux : expr1Aux . EXPR1_17_1 expr1Aux  (54)
	expr1Aux : expr1Aux . EXPR1_18_1 expr1Aux  (55)
	expr1Aux : expr1Aux . EXPR1_19_1 expr1Aux EXPR1_19_3 expr1Aux  (56)
	expr1Aux : expr1Aux . EXPR1_21_1 expr_list LAMBDA1_0_4  (58)
	expr1Aux : expr1Aux . EXPR1_22_1 IDENT1  (59)
	expr1Aux : EXPR1_21_1 expr1Aux . LAMBDA1_0_4  (61)

	EXPR1_10_1  shift 69
	EXPR1_12_1  shift 70
	EXPR1_14_1  shift 71
	EXPR1_19_1  shift 72
	EXPR1_21_1  shift 73
	EXPR1_22_1  shift 74
	EXPR1_7_1  shift 75
	EXPR1_8_1  shift 76
	EXPR1_9_1  shift 77
	LAMBDA1_0_4  shift 84
	EXPR1_11_1  shift 78
	EXPR1_13_1  shift 79
	EXPR1_15_1  shift 80
	EXPR1_16_1  shift 81
	EXPR1_17_1  shift 82
	EXPR1_18_1  shift 83
	.  error

